src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@property --border-angle {
    inherits: false;
    initial-value: 0deg;
    syntax: '<angle>';
}

@layer base {
    html {
        @apply scroll-smooth
    }

    body {
        @apply bg-primary-black text-primary-white font-primary
    }
}

.scrollbar::-webkit-scrollbar {
    @apply h-2 w-2 rounded-full bg-transparent
}

.scrollbar::-webkit-scrollbar-thumb {
    @apply bg-transparent rounded-full;
}

.scrollbar:hover::-webkit-scrollbar-thumb {
    @apply bg-primary-black-300;
}

.scrollbar-hidden::-webkit-scrollbar-thumb {
    @apply bg-transparent;
}

.scroll-hidden::-webkit-scrollbar {
    @apply hidden
}

*::-webkit-scrollbar {
    @apply bg-slate-800 w-2
}

*::-webkit-scrollbar-thumb {
    @apply bg-primary-black-200 rounded-full
}

input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
    /* Removes default appearance */
    height: 16px;
    width: 16px;
    background: url('path-to-your-icon.svg') no-repeat center;
    background-size: contain;
    cursor: pointer;
}

